See-more-button 320px alignment bug fixed!

--- a/style.css
+++ b/style.css
@@ -3204,11 +3204,11 @@ li:before {
     }
 
     /* Home Top border-shadow */
-    /*.bla-home {
+    .bla-home {
         position: relative;
         width: 100%;
-        height:70vh;
-    }*/
+        height:85vh;
+    }
     
     .bla-home:before {
         /*border:4px solid green;*/
@@ -3227,11 +3227,14 @@ li:before {
 
     .sec-home {
         width:100%;
-        height:50vh;
+        height:85vh;
+        margin-top: 15%;
+        /*border:2px solid red;*/
     }
 
     .div_home {
         /*border:2px solid yellow;*/
+        margin-bottom: 5%;
         position: relative;
         z-index: 0;
         top:0px;
@@ -3264,11 +3267,12 @@ li:before {
     }
 
     .see-more_button {
+        display: inline-block;
         border:3px solid var(--anchor-accents);
         border-radius:4px;
         padding:10px 20px;
         position:relative;
-        top:8%;
+        top:0%;
         left:5%;
         z-index: 1;
     }
